--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
   <main> 
     <p>Me chamo <strong>Miguel Thomas Almeida de Freitas Ochoa</strong>, tenho 18 anos e Sou estudante de Engenharia da Computação na Universidade Santa Cecília, com formação técnica em Eletrotécnica pela ETEC Aristóteles Ferreira. Tenho grande interesse por desenvolvimento de software, tecnologia e resolução de problemas através da programação. <br>
-    Já desenvolvi um projeto pessoal utilizando HTML, CSS e JavaScript, onde desenvolvi um anexador de links. Além disso, tenho um pequeno conehcimento em C e C++ adquiridos durante o curso de Engenharia da Computação. <br> 
+    Já desenvolvi um projeto pessoal utilizando HTML, CSS e JavaScript, onde desenvolvi um agregador de links. Além disso, tenho um pequeno conhecimento em C e C++ adquiridos durante o curso de Engenharia da Computação. <br> 
     Participei do curso Discover da Rocketseat, onde coloquei em prática fundamentos do desenvolvimento web. </p>
     <h3>Foto de Perfil</h3>
     <img src="https://github.com/OchoaMiguel.png" alt="Foto de perfil">
@@ -42,4 +42,5 @@
     </footer>
   </main>
 </body>   
+
 </html>
