--- a/index.html
+++ b/index.html
@@ -1,46 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minha Página de Apresentação Pessoal</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Minha Página de Apresentação Pessoal</title>
+  </head>
 
-<body>
-  <header>
-  <h1>Miguel Thomas Almeida de Freitas Ochoa</h1>
-  <nav>
-    <ol> 
-      <li><a href="https://linkedin.com/in/ochoa-miguel" target="_blank" rel="noopener noreferrer">Sobre</a></li>
-      <li><a href="https://playvalorant.com/pt-br/?gclsrc=aw.ds&gad_source=1&gad_campaignid=10161918620&gclid=Cj0KCQjwh5vFBhCyARIsAHBx2wzuHlrFfEnuT51oev4NjlY-wB_yFJSi8VdpyhRUVSwCSGO3jTvkQYAaAhlREALw_wcB" target="_blank" rel="noopener noreferrer">Hobbies</a></li>
-      <li><a href="https://wa.me/5513996632604" target="_blank" rel="noopener noreferrer">Contato</a></li>
-    </ol>
-    <hr>
-  </nav>
-</header>
-  <main> 
-    <p>Me chamo <strong>Miguel Thomas Almeida de Freitas Ochoa</strong>, tenho 18 anos e Sou estudante de Engenharia da Computação na Universidade Santa Cecília, com formação técnica em Eletrotécnica pela ETEC Aristóteles Ferreira. Tenho grande interesse por desenvolvimento de software, tecnologia e resolução de problemas através da programação. <br>
-    Já desenvolvi um projeto pessoal utilizando HTML, CSS e JavaScript, onde desenvolvi um agregador de links. Além disso, tenho um pequeno conhecimento em C e C++ adquiridos durante o curso de Engenharia da Computação. <br> 
-    Participei do curso Discover da Rocketseat, onde coloquei em prática fundamentos do desenvolvimento web. </p>
-    <h3>Foto de Perfil</h3>
-    <img src="https://github.com/OchoaMiguel.png" alt="Foto de perfil">
+  <body>
+    <header>
+      <h1>Miguel Thomas Almeida de Freitas Ochoa</h1>
+      <nav>
+        <ol>
+          <li>
+            <a
+              href="https://linkedin.com/in/ochoa-miguel"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Sobre</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://playvalorant.com/pt-br/?gclsrc=aw.ds&gad_source=1&gad_campaignid=10161918620&gclid=Cj0KCQjwh5vFBhCyARIsAHBx2wzuHlrFfEnuT51oev4NjlY-wB_yFJSi8VdpyhRUVSwCSGO3jTvkQYAaAhlREALw_wcB"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Hobbies</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://wa.me/5513996632604"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Contato</a
+            >
+          </li>
+        </ol>
+        <hr />
+      </nav>
+    </header>
+    <main>
+      <section class="perfil">
+        <img src="https://github.com/OchoaMiguel.png" alt="Foto de perfil" />
 
-    <h3>Meus Hobbies</h3>
-    <ul>
-      <li><a href="https://www.youtube.com/watch?v=FxCqa3nb6XM" target="_blank" rel="noopener noreferrer">Lutar muay thai</a></li>
-      <li><a href="https://youtu.be/epXxTChozbU?t=15928" target="_blank" rel="noopener noreferrer">Jogar Valorant</a></li>
-      <li><a href="https://www.youtube.com/watch?v=k2I4oqMsGB4" target="_blank" rel="noopener noreferrer">Fazer Musculação</a></li>
-    </ul>
-    <h3>Meus Obejetivos</h3>
-    <ol>
-      <li>Estudar mais sobre programação</li>
-      <li>Ingressar no mercado de trabalho atuando como desenvolvedor</li>
-      <li>Ficar Rico</li>
-    </ol>
-    <footer>
-      <p>&copy; 2025 - Desenvolvido por Miguel Ochoa</p>
-    </footer>
-  </main>
-</body>   
+        <div class="dados">
+          <h2>Miguel Ochoa</h2>
+          <p>18 anos</p>
+          <p>Estudante de Engenharia da Computação - Unisanta</p>
+          <p>Técnico em Eletrotécnica - ETEC Aristóteles Ferreira</p>
+          
+        </div>
+      </section>
+      <section class="descricao">
+        <h2>Sobre Mim</h2>
+        <p>
+          Me chamo <strong>Miguel Thomas Almeida de Freitas Ochoa</strong>,
+          tenho 18 anos e sou estudante de Engenharia da Computação na
+          Universidade Santa Cecília, com formação técnica em Eletrotécnica pela
+          ETEC Aristóteles Ferreira. Tenho grande interesse por desenvolvimento
+          de software, tecnologia e resolução de problemas através da
+          programação.
+          <p>Já desenvolvi um projeto pessoal utilizando HTML, CSS e JavaScript,
+          onde desenvolvi um anexador de links. Além disso, tenho um pequeno
+          conhecimento em C e C++ adquiridos durante o curso de Engenharia da
+          Computação.</p>
+         <p>Participei do curso Discover da Rocketseat, onde coloquei em prática
+          fundamentos do desenvolvimento web.</p>
+        </p>
+      </section>
+      <section class="hobbies">
 
+        <h2>Meus Hobbies</h2>
+        <ul>
+          <li>
+            <a
+            href="https://www.youtube.com/watch?v=FxCqa3nb6XM"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Lutar muay thai</a
+            >
+          </li>
+          <li>
+            <a
+            href="https://youtu.be/epXxTChozbU?t=15928"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Jogar Valorant</a
+            >
+          </li>
+          <li>
+            <a
+            href="https://www.youtube.com/watch?v=k2I4oqMsGB4"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Fazer Musculação</a
+            >
+          </li>
+        </ul>
+      </section>
+      <section class="objetivos">
+
+        <h2>Meus Objetivos</h2>
+        <ol>
+          <li>Estudar mais sobre programação</li>
+          <li>Ingressar no mercado de trabalho atuando como desenvolvedor</li>
+          <li>Ficar Rico</li>
+        </ol>
+      </section>
+      
+        <footer>
+          <p>&copy; 2025 - Desenvolvido por Miguel Ochoa</p>
+      </footer>
+    </main>
+  </body>
 </html>
